# hnsw-shiro-ef

./: .gitignore  .ignore  CMakeLists.txt  README.md  final_plot.py  fix_adaptive.py  fix_adaptive2.py  fix_cv_score.py  fix_final.py  fix_main.py  fix_matrix2.py  fix_matrix_mode.py  fix_run.py  fix_vis.py  insert_matrix_logic.py  parse_minq.py  parse_ncv.py  patch_cmake.py  patch_corr.py  patch_corr_log.py  patch_corr_reverse.py  patch_filling.py  patch_filling2.py  patch_lookup_flush.py  patch_lookup_weights.py  patch_map.py  patch_matrix.py  patch_simple_M.py  patch_smooth.py  plan.txt  plan13.txt  plan14.txt  plan2.txt  rewrite2.py  setup.sh  use_ldw_pivot.py  visualize_ablation.py  visualize_ef_map.py  visualize_gamma_corr.py  visualize_gamma_sweep.py  (+1 more)
.omo/run-continuation/: ses_0a0981fb0ffeBl02vbxsfvQhXw.json  ses_0aa0c8bd5ffei5WJ3h56mPkhQB.json  ses_0aa0ee018ffeI0aJnTcoJVs5Ij.json  ses_0aa126d68ffePUUy8IHS3lczqV.json  ses_0cfbeccebffe1ieDw0a4M53wvI.json  ses_0cfc46ca3ffegvW1cJPVBHpYNK.json  ses_0d343f042ffegNfQ4JmLqC3PHB.json  ses_0d351a26fffewE00oKrwV38Fn4.json  ses_0d3b485ffffe0GlKViwkDN1J2y.json  ses_0d3b6cebbffeVf3FQ0okpExT2l.json  ses_0d480c9fcffeDQqOvMTqp4Z3nB.json  ses_0d4aef4a2ffeF56XlH1IkQfYXH.json  ses_0d76df2acffeVlWB8GHX3FnXZs.json  ses_0d920357affe27joNRyairjYrI.json  ses_0dca35000ffeVC0acOehOiEWb9.json  ses_0dd95947effeyTQZbIbYIXfNi5.json  ses_0e2ee90abffebKhVfpP78zfFgX.json  ses_0e31006a7ffeuEU3dBkNWY1o5j.json  ses_0e336109affePZRECEzWRd5Mmt.json  ses_0e7feb18bffeJ1g4jtZYPdVtBJ.json  ses_0e802de62ffedW2iLdfncGowrI.json  ses_0e810854affeUtKhfGmKUlTQED.json  ses_0e813f6adffeeBj76TgEKjzsyu.json  ses_0e891cba0ffej2moOqoXfkN0hz.json  ses_10056be15ffe5ysZq9C07KARPE.json  ses_100e87136ffeTXHSmAOXuCIRxz.json  ses_100ee15ddffeer2dzsgXyqqegX.json
2metric/: estimator.h  lookuptable.h  run_2metric.cpp  visualize_performance.py
2metric/compare/: compare_ef.cpp
experiments_driver/: run.cpp  run_ada.cpp  util.h
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_incremental.json  .graphify_labels.json  .graphify_root  .graphify_semantic.json  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  manifest.json
hnswlib/: adaptive_ef.h  distribution.h  estimator.h  hnswalg.h  shiro_ef.h  sketch.h
research/: README_heatmap.md  bucket_correlation.py  compare.cpp  compare_M.cpp  compare_M_analysis.py  compare_M_metrics.csv  compare_analysis.py  compare_global_correlations.py  compare_metrics.csv  compute_bucket_correlations.py  convergence_vs_LID_Proof_Statistics.txt  convergence_vs_LID_Proof_Statistics_GloVe.txt  corr.cpp  corr.py  corr_E.py  deep_convergence_recall.csv  deep_score_recall.csv  describe_plots.py  ef_sweep.cpp  final_plot.py  gamma_buckets.cpp  gamma_correlation.cpp  gamma_sweep.cpp  get_convergence_corr.py  glove_convergence_recall.csv  glove_score_recall.csv  lookup_RC.cpp  lookup_RC_10x10.cpp  lookup_table_5x10.csv  lookup_table_RC.csv  lookup_table_RC_10x10.csv  metrics_dump_deep.csv  metrics_dump_deep_unbuffered.csv  plot_5_regimes.py  plot_all_2hop.py  plot_convergence_vs_lid_proof.py  plot_convergence_vs_lid_proof_glove.py  plot_cv_lid.py  plot_cv_lid_zoomed.py  plot_cv_lid_zoomed_deep.py  (+21 more)
